--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -1,1 +1,6 @@
-<h2>Hello</h2>
+ <% Spree::Product.all.order("avg_rating DESC").limit(5).each do |s| %>
+
+          <h1> <%= s.name %> </h1>            
+          <%= s.avg_rating %>
+
+<% end %>
