--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,31 +1,20 @@
-#spree-header {
-  background-color: 'black';
-  margin-bottom: $line-height-computed;
+#spree-header .my-dropdown-menu li a{
+    color: black;
+}
 
-  #header {
-    background: rgba($gray-darker, 0.4);
-    padding: $line-height-computed 0;
-  }
+html, body {
+  height: 100%;
+}
 
-  #logo {
-    margin-bottom: 10px;
+body {
+  display: flex;
+  flex-direction: column;
+}
 
-    img {
-      max-width: 100%;
-      max-height: 50px;
-    }
-  }
+.page-content {
+  flex: 1 0 auto;
+}
 
-  .nav a {
-    color: white;
-
-    &:hover, &:focus {
-      background: rgba($gray-darker, 0.4);
-    }
-  }
-
-  .navbar {
-    border: 0;
-    margin-bottom: 0;
-  }
+#spree-footer {
+  flex-shrink: 0;
 }
