--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -8,23 +8,25 @@
     <%= render partial: 'spree/shared/head' %>
   </head>
   <body class="<%= body_class %>" id="<%= @body_id || 'default' %>" data-hook="body">
-    <%= render partial: 'spree/shared/google_analytics.js' %>
-    <%= render partial: 'spree/shared/trackers/segment/initializer.js' %>
-    <%= render partial: 'spree/shared/header' %>
+      <%= render partial: 'spree/shared/google_analytics.js' %>
+      <%= render partial: 'spree/shared/trackers/segment/initializer.js' %>
+      <%= render partial: 'spree/shared/header' %>
 
-    <div class="container">
-      <div class="row" data-hook>
-        <%= breadcrumbs(@taxon) %>
+      <div class="container page-content">
+        <div class="row" data-hook>
+          <%= breadcrumbs(@taxon) %>
 
-        <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
+          <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
 
-        <div id="content" class="<%= !content_for?(:sidebar) ? "col-sm-12" : "col-sm-8 col-md-9" %>" data-hook>
-          <%= flash_messages %>
-          <%= yield %>
+          <div id="content" class="<%= !content_for?(:sidebar) ? "col-sm-12" : "col-sm-8 col-md-9" %>" data-hook>
+            <%= flash_messages %>
+            <%= yield %>
+          </div>
+
+          <%= yield :templates %>
         </div>
-
-        <%= yield :templates %>
       </div>
-    </div>
+
+      <%= render partial: 'spree/shared/footer' %>
   </body>
 </html>
