--- a/app/views/spree/shared/_nav_bar.html.erb
+++ b/app/views/spree/shared/_nav_bar.html.erb
@@ -1,7 +1,12 @@
 <nav class="navbar col-md-8 col-sm-9" id="top-nav-bar">
   <ul id="nav-bar" class="nav navbar-nav navbar-right" data-hook>
-    <li id="search-bar" data-hook>
-      <%= render partial: 'spree/shared/search' %>
+    <%= render partial: 'spree/shared/link_to_account' %>
+    <li id="link-to-cart" data-hook>
+      <noscript>
+        <%= link_to_cart %>
+      </noscript>
+      &nbsp;
     </li>
+    <script>Spree.fetch_cart()</script>
   </ul>
 </nav>
