--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,14 +1,37 @@
-#spree-header .my-dropdown-menu li a{
-    color: black;
+@font-face {
+  font-family: "opensans";
+  src: url("Open-Sans-and-Nunito/opensans/OpenSans-ExtraBold.ttf");
+}
+
+@font-face {
+  font-family: "nunito";
+  src: url("Open-Sans-and-Nunito/nunito/Nunito-Regular.ttf");
+}
+
+h1 {
+  font-family: 'opensans';
+}
+
+body {
+  font-family: 'nunito';
+  display: flex;
+  flex-direction: column;
 }
 
 html, body {
   height: 100%;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
+@media screen {
+  .img-carousel {
+    float: right;
+  }
+}
+
+@media (max-width:767px) {
+  .img-carousel {
+    text-align: center;
+  }
 }
 
 .page-content {
@@ -17,4 +40,43 @@ body {
 
 #spree-footer {
   flex-shrink: 0;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.btn-more {
+  color: #000000;
+  border-color: #5680E9;
+}
+
+.bgc-jumbotron {
+  background-color: #f5f5f5;
+}
+
+.my-footer {
+  background-color: #000242;
+}
+
+.landing {
+  //background-image: url("http://sawildlife.co.za/wp-content/uploads/rev-slide-1-bg.jpg");
+  background: linear-gradient(to bottom, #d8d8d8, #525b62);
+}
+
+#logo {
+  margin-bottom: 0px;
+
+  img {
+   max-width: 100%;
+   max-height: 50px;
+  }
+}
+
+.img-carousel {
+  float: right !important;
+}
+
+.navbar .navbar-mb-0 {
+  margin-bottom: 0px;
 }
