--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -12,7 +12,7 @@
               <%= logo %>
             </figure>
             <div class="navbar col-md-8 col-sm-9 col-xs-2" id="top-nav-bar">
-              <ul id="nav-bar" class="nav navbar-nav navbar-right navbar-mb-0" data-hook>
+              <ul id="nav-bar" class="nav navbar-nav navbar-right" data-hook>
                 <li id="home-link" data-hook><%= link_to Spree.t(:store), spree.products_path %></li>
               </ul>
             </div>
@@ -34,7 +34,7 @@
                 <%= image_tag product.images.first.attachment.url(:large), class: "img-responsive img-carousel"%>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                <h1><%= image_tag (product.images.first.attachment.url(:large)) %> </h1>
+                <h1><%= link_to product.name, product_path(product.id) %> </h1>
                 <h3><%= product.description %></h3>
                 <h3><%= product.avg_rating %></h3>
               </div>
