--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -36,7 +36,9 @@
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <h1><%= link_to product.name, product_path(product.id) %> </h1>
                 <h3><%= product.description %></h3>
-                <h3><%= product.avg_rating %></h3>
+                <span title="<%= pluralize(product.avg_rating, 'star') %> <%= Spree.t(:out_of_5) %>">
+                  <%= render 'spree/reviews/stars', stars: product.avg_rating %>
+                </span>
               </div>
             </div>
           </div>
