--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -2,9 +2,13 @@
   <div id="main-nav-bar" class="navbar">
     <ul class="nav navbar-nav" data-hook>
       <li id="home-link" data-hook><%= link_to Spree.t(:home), spree.root_path %></li>
+      <li><%= link_to "Store", spree.products_path %></li>
       <li><%= link_to "Blog", spree.blog_path %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" data-hook>
+    <li id="search-bar" data-hook>
+      <%= render partial: 'spree/shared/search' %>
+    </li>
       <li id="link-to-cart" data-hook>
         <noscript>
           <%= link_to_cart %>
