--- a/app/views/spree/shared/_nav_bar.html.erb
+++ b/app/views/spree/shared/_nav_bar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar col-md-8 col-sm-9" id="top-nav-bar">
   <ul id="nav-bar" class="nav navbar-nav navbar-right" data-hook>
-    <li id="search-bar" data-hook>
-      <%= render partial: 'spree/shared/search' %>
-    </li>
+      <li id='auth_shared_login_path' data-hook>
+      <%= render partial: 'spree/shared/login_bar'%>
+      </li>
   </ul>
 </nav>
